--- a/api-viewer/bower.json
+++ b/api-viewer/bower.json
@@ -16,7 +16,8 @@
     "underscore": "~1.8.3",
     "angular-rickshaw": "~0.10.0",
     "d3": "~3.5.6",
-    "rickshaw": "~1.5.1"
+    "rickshaw": "~1.5.1",
+    "moment": "~2.10.6"
   },
   "resolutions": {
     "angular": "~1.4.3"
